src/test/ui/implied-bounds/issue-100690.stderr
error: lifetime may not live long enough
  --> $DIR/issue-100690.rs:37:9
   |
LL | impl<'a, T: 'a> Handle<'a, T, UIView<'a, T>, Result<(), io::Error>> for TUIHandle<T> {
   |      -- lifetime `'a` defined here
...
LL |         real_dispatch(f)
   |         ^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> $DIR/issue-100690.rs:9:8
   |
LL |     F: FnOnce(&mut UIView<T>) -> Result<(), io::Error> + Send + 'static,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-100690.rs:37:9
   |
LL |         real_dispatch(f)
   |         ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'a, 'b> FnOnce<(&'a mut UIView<'b, T>,)>`
              found trait `for<'a> FnOnce<(&'a mut UIView<'_, T>,)>`
note: the lifetime requirement is introduced here
  --> $DIR/issue-100690.rs:9:8
   |
LL |     F: FnOnce(&mut UIView<T>) -> Result<(), io::Error> + Send + 'static,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-100690.rs:37:9
   |
LL |         real_dispatch(f)
   |         ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected associated type `<F as FnOnce<(&mut UIView<'_, T>,)>>::Output`
              found associated type `<F as FnOnce<(&mut UIView<'_, T>,)>>::Output`
note: the lifetime requirement is introduced here
  --> $DIR/issue-100690.rs:9:34
   |
LL |     F: FnOnce(&mut UIView<T>) -> Result<(), io::Error> + Send + 'static,
   |                                  ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
